fix overlap

--- a/css/styles.styl
+++ b/css/styles.styl
@@ -353,6 +353,9 @@ body[data-format="mobile"]
 /* end page formatting */
 
 /* T R A N S I T I O N S */
+body[data-format="double"]
+	.exit-to-left,.exit-to-right
+		z-index -1
 /* Single */
 .page-container.exit-to-left
 	animation exit-to-left transition_opts
